fixed directions image on getting there so it's bigger on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -273,6 +273,11 @@ div.listings-gallery {
       display: block;
       cursor: pointer;
   }
+
+  #directions {
+    
+    width: 90%;
+  }
 }
 
 .show {
